aws/eks/vpc.tf
# VPC
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr

  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${lower(var.app_name)}-vpc"
  }
}
